--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<p>My favorite <span class="favourite-color" style="color:red;">color</span> is red</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
