--- a/main.html
+++ b/main.html
@@ -4,11 +4,15 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+        .favorite-color{
+            color: red;
+        }
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-	<p>My favorite <span class="favourite-color" style="color:red;">color</span> is red</p>
+	 <p>My favorite color is <span class="favorite-color">red</span></p>
     <script type="text/javascript" src="./script.js">
 </script>
 
