--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	 <p>My favorite color is <span class="favorite-color">red</span></p>
+	 <p>My favorite <span class="favorite-color">color</span>is red</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
