--- a/main.html
+++ b/main.html
@@ -6,13 +6,13 @@
 	<link rel="stylesheet" href="styles.css">
 	<style>
         .favorite-color{
-            color: red;
+            color: yellow;
         }
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-	 <p>My favorite <span class="favorite-color">color</span>is red</p>
+	 <p>My favorite color is <span class="favorite-color">RED</span></p>
     <script type="text/javascript" src="./script.js">
 </script>
 
