--- a/main.html
+++ b/main.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
-	<style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Room Makeover</title>
+    <style>
         .favorite-color{
             color: red;
         }
+    </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-	 <p>My favorite color is <span class="favorite-color">red</span></p>
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <p>My favorite color is <span class="favorite-color">red </span></p>
 </body>
-
 </html>
